--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,81 @@
 .App {
   text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
   display: flex;
-  flex-direction: column;
+  justify-content: space-around;
   align-items: center;
+}
+
+/* .groups,
+.message{
+  border: 2px solid black;
+} */
+/* .groups{
+  border: 2px;
+  height: 250px;
+  width: 250px;
+}
+.message{
+  border: 2px;
+  height: 150px;
+  width: 150px;
+} */
+
+
+/* .people{
+  height: 500px;
+  width: auto;
+} */
+
+.groups,
+.message{
+  height: 100px;
+  width: 800px;
+  border-style: groove;
+
+}
+.message{
+  display: flex;
+}
+.people{
+  height: 150px;
+  width: 400px;
+
+}
+
+.pbox{
+  display: flex;
+  width: 100%;
+}
+
+.pbox p{
+  align-self: flex-end;
+  margin-left: 250px;
+}
+h2{
+  position:relative;
+  float: left;
+}
+#date{
+  position:relative;
+  float: right;
+}
+
+img,
+.people{
+  height: 50px;
+  width: 80px;
+}
+
+.groups{
+  display: flex;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
 }
 
-.App-link {
-  color: #61dafb;
+h1{
+  order: 2;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.groups img{
+  order: 1;
 }
