--- a/src/Components/login.css
+++ b/src/Components/login.css
@@ -2,7 +2,7 @@ section{
     position: relative;
     min-height: 50vh;
     width: 100vh;
-    background: lightslategray;
+    background-color: lightblue;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -123,7 +123,7 @@ section{
 }
 .container .userSignupBx .imgBx{
     /* top: -100%; */
-    transition: 0.5s;
+    transition: 2s;
 }
 .container .active .userSignupBx .imgBx{
     top: 0;
@@ -137,7 +137,7 @@ section{
 }
 .container .userSigninBx .imgBx{
     top: 0;
-    transition: 0.5s;
+    transition: 2s;
 }
 .container .active .userSigninBx .imgBx{
     top: -100%;
