--- a/src/Components/login.css
+++ b/src/Components/login.css
@@ -13,7 +13,7 @@ section{
     position: relative;
     width: 800px;
     height: 400px;
-    background: #fff;
+    border: none;
     box-shadow: 0 15px 50px rgba(0,0,0,0.1);
 }
 .userSigninBx,
@@ -27,7 +27,7 @@ section{
 }
 .imgBx{
     position: relative;
-    width: 50%;
+    width: 100%;
     height: 100%;
     transition: 0.5s;
 }
@@ -41,7 +41,7 @@ section{
 }
 .formBx{
     position: relative;
-    width: 50%;
+    width: 100%;
     background: lightgrey;
     display: flex;
     justify-content: center;
