--- a/src/App.css
+++ b/src/App.css
@@ -66,7 +66,7 @@ header{
   display: flex;
   justify-content: space-between;
   align-items: center;
-  background: darkcyan;
+  background: skyblue;
 }
 
 header img{
@@ -83,6 +83,31 @@ header button{
 }
 
 main{
+  background: #03032b;
   height: 800px;
-  background: lightgoldenrodyellow;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+#LandingText{
+  border: 2px white solid;
+  position: relative;
+  left: 60px;
+  height: 80%;
+  width: 30%;
+}
+
+#LandingPic{
+  height: 100%;
+  width: 60%;
+  background: url(https://img.lovepik.com/photo/50047/4556.jpg_wh860.jpg);
+  background-size: cover;
+  background-position: left;
+  background-repeat: none;
+}
+
+#LandingInfo{
+  height: 800px;
+  background: lightsteelblue;
 }
