--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 
 div{
-    border: solid 2px;
+    /* border: solid 2px; */
     float: auto;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
