--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,9 @@
 
 div{
-    border: solid 2px;
+    /* border: solid 2px; */
     float: auto;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    
 }
 
 .primary{
@@ -12,6 +13,7 @@ div{
     padding: 12px;
     flex-wrap: wrap;
     margin: 12px;
+    
 
 }
 
@@ -59,3 +61,4 @@ to {
     justify-content: center;
     align-items: center;
 }
+
