--- a/src/Components/login.css
+++ b/src/Components/login.css
@@ -112,16 +112,16 @@ section{
 
 .container .active .userSignupBx{
     pointer-events: initial;
-} */
+}
 
-/* .container .userSignupBx .formBx{
+.container .userSignupBx .formBx{
     top: 100%;
-} */
+}
 .container .active .userSignupBx .formBx{
     top: 0;
 }
 .container .userSignupBx .imgBx{
-    /* top: -100%; */
+    top: -100%;
     transition: 2s;
 }
 .container .active .userSignupBx .imgBx{
@@ -140,4 +140,4 @@ section{
 }
 .container .active .userSigninBx .imgBx{
     top: -100%;
-}
+} */
