--- a/src/App.css
+++ b/src/App.css
@@ -86,7 +86,7 @@ header img{
 }
 
 main{
-  background: #03032b;
+  background: #010716;
   height: 800px;
   display: flex;
   justify-content: space-between;
@@ -94,24 +94,68 @@ main{
 }
 
 #LandingText{
-  border: 2px white solid;
   position: relative;
-  left: 60px;
+  left: 12px;
   height: 80%;
-  width: 30%;
+  width: 35%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+#LandingText h1{
+  font-family: cursive;
+  font-size: 80px;
+  color: lightskyblue;
+}
+
+#LandingText p{
+  margin-top: 25px;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-size: 20px;
+  color: aqua;
+  text-align: center;
 }
 
 #LandingPic{
-  border: solid #03032b;
+  /* border: solid #03032b; */
   height: 100%;
   width: 60%;
-  background: url(https://img.lovepik.com/photo/50047/4556.jpg_wh860.jpg);
+  background: url('./Components/pictures/27681894.jpg');
   background-size: cover;
-  background-position: left;
+  background-position: center;
   background-repeat: none;
 }
 
 #LandingInfo{
   height: 800px;
   background: lightsteelblue;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+#creativeSpace{
+  height: 90%;
+  width: 95%;
+}
+
+#join{
+  margin-top: 1%;
+  font-size: 60px;
+  font-family: fantasy;
+  font-style: oblique;
+}
+
+.power{
+  margin-top: 5%;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+
+#mySection{
+  border: 2px solid black;
+  height: 65vh;
+  width: 75vh;
 }
