--- a/src/Components/messages.css
+++ b/src/Components/messages.css
@@ -10,15 +10,15 @@ body{
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    overflow: scroll;
+    /* overflow: scroll; */
     margin: 0;
+    width: 50vh;
 }
 
 .container{
     border-radius: 5px;
     box-shadow: 3px 3px 10px rgba(0,0,0,0.2);
     /* overflow: scroll; */
-    /* width: 75vh; */
 }
 
 .title{
