--- a/src/Components/messages.css
+++ b/src/Components/messages.css
@@ -2,7 +2,7 @@
 *{
     box-sizing: border-box;
 }
-
+/* 
 body{
     background-color: #f8f9fd;
     font-family: 'Roboto', sans-serif;
@@ -10,10 +10,10 @@ body{
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    /* overflow: scroll; */
+    overflow: scroll; 
     margin: 0;
     width: 50vh;
-}
+} */
 
 .container{
     border-radius: 5px;
